force-app/main/default/objects/Hueco__c/Hueco__c.object-meta.xml
<CustomObject>
    <label>Hueco</label>
    <nameField>
        <displayFormat>HN-{00000}</displayFormat>
        <label>Hueco numero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Huecos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>