force-app/main/default/objects/Hueco__c/fields/Disponibilidad__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidad__c</fullName>
    <label>Disponibilidad</label>
    <referenceTo>Disponibilidad__c</referenceTo>
    <relationshipLabel>Huecos</relationshipLabel>
    <relationshipName>Huecos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>