force-app/main/default/objects/Hueco__c/fields/Hora_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_inicio__c</fullName>
    <label>Hora de inicio</label>
    <type>Time</type>
</CustomField>