force-app/main/default/objects/Hueco__c/fields/Hora_fin__c.field-meta.xml
<CustomField>
    <fullName>Hora_fin__c</fullName>
    <label>Hora fin</label>
    <type>Time</type>
</CustomField>